qmltc: Fix usage of namespaced attached types

We can't have a '.' in the variable name. Use '_' instead. In addition,
disambiguate the names by always prepending a number to the part
extracted from QML. This is safe because QML names can't start with
numbers.

Pick-to: 6.8
Fixes: QTBUG-130838
Change-Id: I1243070a3cb901bc4c2c108ecbec0c9cbbc57a55
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>